Bug 1026641 - Put outline-style:auto rendering behind a pref and disable it by default.  r=roc