layout/base/nsLayoutUtils.h
@@ -2278,6 +2278,8 @@ public:
                                           nsRect aDisplayPortBase,
                                           nsRect* aOutDisplayport);
 
+  static bool IsOutlineStyleAutoEnabled();
+
 private:
   static uint32_t sFontSizeInflationEmPerLine;
   static uint32_t sFontSizeInflationMinTwips;
