modules/libpref/src/init/all.js
@@ -1967,6 +1967,9 @@ pref("layout.css.grid.enabled", false);
 // Is support for CSS box-decoration-break enabled?
 pref("layout.css.box-decoration-break.enabled", false);
 
+// Is layout of CSS outline-style:auto enabled?
+pref("layout.css.outline-style-auto.enabled", false);
+
 // pref for which side vertical scrollbars should be on
 // 0 = end-side in UI direction
 // 1 = end-side in document/content direction
